[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
description = "A multi-threaded webserver app demonstrating Rust concept"
repository = "https://github.com/jakroth/rust_projects"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["learn rust", "webserver", "http",  "tcp", "thread"]
categories = ["study", "personal", "command line utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
